Compositor: In Blender 292 "Set Alpha" node is undefined #84646

Closed
opened 2021-01-12 17:37:16 +01:00 by Ilja Razinkov · 6 comments

System Information
Operating system: MacOs

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2021-01-11 21:30, hash: acbda123ad, type: Release
Worked: 2.91

Short description of error
291: open compositor, add SetAlpha node and wrap it in group.
292: open file and check node - it will be red and "undefined"

See screenshots and attached blend

Screenshot 2021-01-12 at 19.33.33.png

Screenshot 2021-01-12 at 19.33.53.png

SetAlphaLost.blend1

**System Information** Operating system: MacOs **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2021-01-11 21:30, hash: acbda123ad08, type: Release Worked: 2.91 **Short description of error** 291: open compositor, add SetAlpha node and wrap it in group. 292: open file and check node - it will be red and "undefined" See screenshots and attached blend ![Screenshot 2021-01-12 at 19.33.33.png](https://archive.blender.org/developer/F9561223/Screenshot_2021-01-12_at_19.33.33.png) ![Screenshot 2021-01-12 at 19.33.53.png](https://archive.blender.org/developer/F9561225/Screenshot_2021-01-12_at_19.33.53.png) [SetAlphaLost.blend1](https://archive.blender.org/developer/F9561222/SetAlphaLost.blend1)
Author

Added subscriber: @IPv6

Added subscriber: @IPv6

Added subscribers: @Jeroen-Bakker, @rjg

Added subscribers: @Jeroen-Bakker, @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

That is an issue in the versioning code added in 9dbea1db66. Instead of iterating over the current compositor node tree, it should probably use FOREACH_NODETREE_BEGIN (bmain, ntree, id) to also handle the node groups @Jeroen-Bakker .

That is an issue in the versioning code added in 9dbea1db66. Instead of iterating over the current compositor node tree, it should probably use `FOREACH_NODETREE_BEGIN (bmain, ntree, id)` to also handle the node groups @Jeroen-Bakker .
Jeroen Bakker self-assigned this 2021-01-13 11:43:33 +01:00

This issue was referenced by 38df935c09

This issue was referenced by 38df935c0985ea10dd79b92f6cb5f468931f04c1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84646
No description provided.