Fix T84646: Compositor: In Blender 292 "Set Alpha" node is undefined

Incorrect version code introduced by 9dbea1db66da would not check inside
node groups.